// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table align column should not override cell style 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <div class="ant-spin-container">
      <div class="ant-table ant-table-scroll-position-left ant-table-default">
        <div class="ant-table-content">
          <!---->
          <div class="ant-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
              </colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th key="name" class=""><span class="ant-table-header-column"><div><span class="ant-table-column-title">Name</span><span class="ant-table-column-sorter"></span>
          </div></span></th>
          <th key="age" class="ant-table-align-center ant-table-row-cell-last" style="text-align: center;"><span class="ant-table-header-column"><div><span class="ant-table-column-title">Age</span><span class="ant-table-column-sorter"></span>
        </div></span></th>
        </tr>
        </thead>
        <tbody class="ant-table-tbody">
          <tr class="ant-table-row ant-table-row-level-0" data-row-key="1">
            <td class=""></td>
            <td class="" style="text-align: center; color: red;">32</td>
          </tr>
          <tr class="ant-table-row ant-table-row-level-0" data-row-key="2">
            <td class=""></td>
            <td class="" style="text-align: center; color: red;">42</td>
          </tr>
        </tbody>
        </table>
      </div>
    </div>
  </div>
  <ul unselectable="unselectable" class="ant-pagination ant-table-pagination">
    <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link">
        <!----></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="Next Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-next"><a class="ant-pagination-item-link">
        <!----></a></li>
    <!---->
  </ul>
</div>
</div>
</div>
`;

exports[`Table renders JSX correctly 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <div class="ant-spin-container">
      <div class="ant-table ant-table-scroll-position-left ant-table-default">
        <div class="ant-table-content">
          <!---->
          <div class="ant-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
                <col>
              </colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th key="0" colspan="2" class=""><span class="ant-table-header-column"><div><span class="ant-table-column-title">Name</span><span class="ant-table-column-sorter"></span>
          </div></span></th>
          <th key="age" rowspan="2" class="ant-table-row-cell-last"><span class="ant-table-header-column"><div><span class="ant-table-column-title">Age</span><span class="ant-table-column-sorter"></span>
        </div></span></th>
        </tr>
        <tr>
          <th key="firstName" class=""><span class="ant-table-header-column"><div><span class="ant-table-column-title">First Name</span><span class="ant-table-column-sorter"></span>
      </div></span></th>
      <th key="lastName" class=""><span class="ant-table-header-column"><div><span class="ant-table-column-title">Last Name</span><span class="ant-table-column-sorter"></span>
    </div></span></th>
    </tr>
    </thead>
    <tbody class="ant-table-tbody">
      <tr class="ant-table-row ant-table-row-level-0" data-row-key="1">
        <td class="">John</td>
        <td class="">Brown</td>
        <td class="">32</td>
      </tr>
      <tr class="ant-table-row ant-table-row-level-0" data-row-key="2">
        <td class="">Jim</td>
        <td class="">Green</td>
        <td class="">42</td>
      </tr>
    </tbody>
    </table>
  </div>
</div>
</div>
</div>
</div>
</div>
`;
